<resources>
    <string name="app_name">Fill Time</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="no_data_text">Nothing scanned yet</string>
    <string name="qr_code_message">Please put the qr-code inside the coloured square</string>
    <string name="news">NEWS</string>
    <string name="readings">READINGS</string>
    <string name="culture">CULTURE</string>
    <string name="food">FOOD</string>
    <string name="game">GAME</string>
    <string name="random">RANDOM</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.</string>
    <string name="header_title_fill">FILL</string>
    <string name="header_title_time">TIME</string>

    <string name="start">START</string>
    <string name="fill_your_time">FILL YOUR TIME</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
