<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.timefiller.filltime.MenuActivity">

    <include layout="@layout/header"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/circle_half_menu_top" />-->
        <View
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_half_menu_top" />

        <com.timefiller.filltime.views.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="15'"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_news"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/menu_btn_selector"
        android:onClick="onMenuItemClick"
        android:orientation="horizontal">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>

        <ImageView
            android:id="@+id/img_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:src="@drawable/news" />

        <com.timefiller.filltime.views.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="@string/news"
            android:textColor="@color/cyan_200"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_read"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/menu_btn_selector"
        android:onClick="onMenuItemClick"
        android:orientation="horizontal">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>

        <ImageView
            android:id="@+id/img_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:src="@drawable/book" />

        <com.timefiller.filltime.views.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="@string/readings"
            android:textColor="@color/cyan_200"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_culture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/menu_btn_selector"
        android:onClick="onMenuItemClick"
        android:orientation="horizontal">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>

        <ImageView
            android:id="@+id/img_culture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:src="@drawable/culture" />

        <com.timefiller.filltime.views.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="@string/culture"
            android:textColor="@color/cyan_200"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_food"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/menu_btn_selector"
        android:onClick="onMenuItemClick"
        android:orientation="horizontal">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>

        <ImageView
            android:id="@+id/img_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:src="@drawable/food" />

        <com.timefiller.filltime.views.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="@string/food"
            android:textColor="@color/cyan_200"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_game"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/menu_btn_selector"
        android:onClick="onMenuItemClick"
        android:orientation="horizontal">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>

        <ImageView
            android:id="@+id/img_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:src="@drawable/games" />

        <com.timefiller.filltime.views.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="@string/game"
            android:textColor="@color/cyan_200"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/cyan_200"></View>
    </LinearLayout>
    <!--
        <LinearLayout
            android:id="@+id/btn_random"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/menu_btn_selector"
            android:onClick="onMenuItemClick"
            android:orientation="horizontal">

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/cyan_200"></View>

            <ImageView
                android:id="@+id/img_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:src="@drawable/random" />

            <com.timefiller.filltime.views.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/random"
                android:textColor="@color/cyan_200"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/cyan_200"></View>
        </LinearLayout>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <View
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/circle_half_menu" />

        <View
            android:id="@+id/img_random"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/random_white"/>

    </RelativeLayout>

</LinearLayout>
